// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/SaveButton should match snapshot, extraClasses 1`] = `
<button
  className="save-button btn btn-primary some-class"
  disabled={false}
  id="saveSetting"
  type="submit"
>
  <LoadingWrapper
    loading={false}
    text="Saving"
    type="spinner"
  >
    Save
  </LoadingWrapper>
</button>
`;

exports[`components/SaveButton should match snapshot, on defaultMessage 1`] = `
<button
  className="save-button btn btn-primary"
  disabled={false}
  id="saveSetting"
  type="submit"
>
  <LoadingWrapper
    loading={false}
    text="Saving"
    type="spinner"
  >
    Save
  </LoadingWrapper>
</button>
`;

exports[`components/SaveButton should match snapshot, on defaultMessage 2`] = `
<button
  className="save-button btn btn-primary"
  disabled={false}
  id="saveSetting"
  type="submit"
>
  <LoadingWrapper
    loading={false}
    text="Saving"
    type="spinner"
  >
    Go
  </LoadingWrapper>
</button>
`;

exports[`components/SaveButton should match snapshot, on savingMessage 1`] = `
<button
  className="save-button btn btn-primary"
  disabled={true}
  id="saveSetting"
  type="submit"
>
  <LoadingWrapper
    loading={true}
    text="Saving"
    type="spinner"
  >
    Save
  </LoadingWrapper>
</button>
`;

exports[`components/SaveButton should match snapshot, on savingMessage 2`] = `
<button
  className="save-button btn btn-primary"
  disabled={true}
  id="saveSetting"
  type="submit"
>
  <LoadingWrapper
    loading={true}
    text="Saving Config..."
    type="spinner"
  >
    Save
  </LoadingWrapper>
</button>
`;
